--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start-local-db": "docker compose -f docker-compose-postgres.yml up",
     "typecheck": "tsc --noEmit",
     "push-sql-schema": "drizzle-kit push --config ./drizzle.config.ts",
-    "generate-jwt-key": "npx tsx scripts/generate-keys.ts"
+    "generate-jwt-key": "npx tsx scripts/generate-keys.ts",
+    "test:socket": "node scripts/test-socket.mjs"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
@@ -44,6 +45,8 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.3",
     "react-jwt": "^1.3.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "zod": "^3.24.4"
