Added customer server before nextjs which includes socketio

--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
+    "dev": "tsx index.ts",
+    "build-server": "esbuild index.ts --bundle --outfile=dist/index.js --platform=node --external:./node_modules/*",
+    "build-next": "next build",
+    "build": "npm run build-server && npm run build-next",
+    "start": "NODE_ENV=production node dist/server.js",
     "lint": "next lint",
     "start-local-db": "docker compose -f docker-compose-postgres.yml up",
     "typecheck": "tsc --noEmit",
     "push-sql-schema": "drizzle-kit push --config ./drizzle.config.ts",
-    "generate-jwt-key": "npx tsx scripts/generate-keys.ts",
+    "generate-jwt-key": "tsx scripts/generate-keys.ts",
     "test:socket": "node scripts/test-socket.mjs"
   },
   "dependencies": {
@@ -33,6 +35,7 @@
     "cmdk": "^1.1.1",
     "cookie": "^1.0.2",
     "cookies-next": "^5.1.0",
+    "dotenv": "^16.5.0",
     "drizzle-orm": "^0.43.1",
     "jose": "^6.0.11",
     "js-cookie": "^3.0.5",
@@ -60,6 +63,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "drizzle-kit": "^0.31.1",
+    "pkgroll": "^2.12.2",
     "tailwindcss": "^4",
     "tsx": "^4.19.4",
     "tw-animate-css": "^1.2.9",
