--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "lucide-react": "^0.507.0",
     "next": "^15.3.2",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.6",
     "pg": "^8.16.0",
     "random-words": "^2.0.1",
     "react": "^19.0.0",
@@ -62,6 +63,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.1",
     "@types/pg": "^8.15.2",
     "@types/react": "^19",
     "@types/react-dom": "^19",
