--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -8,7 +8,7 @@ on:
 
 env:
   REGISTRY: docker.io
-  IMAGE_NAME: dergrosse/r6-strat-organizer
+  IMAGE_NAME: dergrosse/r6-strats
 
 jobs:
   build-and-push:
