--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "convex": "convex dev",
     "build": "next build",
-    "start": "NODE_ENV=production node dist/index.js",
+    "start": "next start",
     "typecheck": "tsc --noEmit",
     "setup-local-auth": "tsx scripts/setup-auth.ts"
   },
